feat: code refactoring, timer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<div id="game">
-  <app-game-board class="board"></app-game-board>
+<div class="game">
+  <app-game-board></app-game-board>
+  <app-turn-indicator class="turn-indicator"></app-turn-indicator>
 </div>
