--- a/src/app/game-board/game-board.component.scss
+++ b/src/app/game-board/game-board.component.scss
@@ -1,3 +1,56 @@
-.board-image {
-  position: absolute;
+.board {
+  align-self: center;
+  display: grid;
+  grid-template: 1fr / 1fr;
+  width: fit-content;
+
+  .board-part {
+    grid-column: 1 / 1;
+    grid-row: 1 / 1;
+  }
+
+  .board-slots {
+    z-index: 10;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: end;
+
+    .column {
+      margin: 0px 18px 58px 0px;
+      display: flex;
+      flex-direction: column;
+      justify-content: end;
+      align-items: center;
+      height: 100%;
+      position: relative;
+
+      &:first-child {
+        margin-left: 15px;
+      }
+
+      .slot:not(:first-child) {
+        margin-top: 9px;
+      }
+
+      .marker {
+        display: none;
+      }
+
+      &:hover .marker {
+        display: block;
+        position: absolute;
+        top: 20px;
+      }
+    }
+  }
+
+  #board-layer-white {
+    pointer-events: none;
+    z-index: 100;
+  }
+
+  #board-layer-black {
+    z-index: 1;
+  }
 }
