--- a/src/app/game-board/game-board.component.scss
+++ b/src/app/game-board/game-board.component.scss
@@ -18,6 +18,7 @@
 
     .column {
       margin: 0px 18px 58px 0px;
+      width: 70px;
       display: flex;
       flex-direction: column;
       justify-content: end;
@@ -41,6 +42,10 @@
         display: block;
         position: absolute;
         top: 20px;
+      }
+
+      .empty-slot {
+        width: 100%;
       }
     }
   }
